root/etc/iptables/simple_firewall.rules
# Generated by iptables-save v1.6.1 on Thu Jul 13 11:33:11 2017
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -o tun+ -j MASQUERADE
COMMIT
# Completed on Thu Jul 13 11:33:11 2017
# Generated by iptables-save v1.6.1 on Thu Jul 13 11:33:11 2017
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:FUCKGFW - [0:0]
-A OUTPUT -o eth0 -j FUCKGFW
-A FUCKGFW -d 45.76.96.176/32 -j RETURN
-A FUCKGFW -d 0.0.0.0/8 -j RETURN
-A FUCKGFW -d 10.0.0.0/8 -j RETURN
-A FUCKGFW -d 127.0.0.0/8 -j RETURN
-A FUCKGFW -d 169.254.0.0/16 -j RETURN
-A FUCKGFW -d 172.16.0.0/12 -j RETURN
-A FUCKGFW -d 192.168.0.0/16 -j RETURN
-A FUCKGFW -d 224.0.0.0/4 -j RETURN
-A FUCKGFW -d 240.0.0.0/4 -j RETURN
-A FUCKGFW -m geoip ! --destination-country CN  -j MARK --set-xmark 0xc8/0xffffffff
COMMIT
# Completed on Thu Jul 13 11:33:11 2017
# Generated by iptables-save v1.6.1 on Thu Jul 13 11:33:11 2017
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A OUTPUT -d 8.8.8.8/32 -o eth0 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 8.8.4.4/32 -o eth0 -j REJECT --reject-with icmp-port-unreachable
COMMIT
# Completed on Thu Jul 13 11:33:11 2017
